# quant-research-workflow

./: # Hypothesis Testing Pipeline — Prompt Guide  .gitignore  CLAUDE.md  Workflow  pre EDA  visuals
quant-research-pipeline/: .gitignore  AGENTS.md  IMPROVEMENT_PLAN.md  Makefile  README.md  requirements-extract.txt  requirements-stratpipe.txt
quant-research-pipeline/codex_tasks/: build-from-spec.md
quant-research-pipeline/repo/: Makefile  README.md  config.yaml  pyproject.toml
quant-research-pipeline/repo/.github/workflows/: test.yml
quant-research-pipeline/repo/notebooks/: 00_research.ipynb  01_backtest.ipynb
quant-research-pipeline/repo/src/fx_cookbook/: __init__.py  backtest.py  portfolio.py  risk.py  signals.py  spec_models.py  validation.py
quant-research-pipeline/repo/src/momentum_strategy_v1/: __init__.py  portfolio.py  signals.py  spec_models.py
quant-research-pipeline/repo/tests/: conftest.py  test_backtest.py  test_config_loads.py  test_portfolio.py  test_risk.py  test_signals.py  test_validation.py
quant-research-pipeline/spec/: SPEC.md  spec.yaml
quant-research-pipeline/synth/: formula.md  strategy.md
quant-research-pipeline/templates/: extraction_prompt.md  notebook_template.ipynb  spec_template.md  strategy_spec.md  synthesis_template.md  writeup_template.tex
quant-research-pipeline/tools/: call_gemini.py  extract_modules.py  ingest.py  init_strategy.sh  pipeline.py  run-extract.sh  run-stratpipe.sh  scan_pdf.py  (+2 more)
reviews/: 2026_03_08_architecture_review_v2.md  2026_03_08_code_review_v2.md  2026_03_08_refactoring_plan.md
(+73 files in other folders)
