[project]
name = "quant-research-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas==2.3.3",
  "numpy==2.4.2",
  "scipy==1.17.0",
  "statsmodels==0.14.6",
  "scikit-learn==1.8.0",
  "matplotlib==3.10.8",
  "seaborn==0.13.2",
  "pytest==8.4.2",
  "pytest-cov==5.0.0",
  "hypothesis==6.151.9",
  "jupyterlab==4.5.4",
  "nbformat==5.10.4",
  "ipykernel==6.31.0",
  "ruff==0.15.2",
  "pre-commit==3.8.0",
  "pyyaml==6.0.3",
  "pydantic==2.12.5",
  "typer==0.24.1",
  "rich==13.9.4",
  "build==1.4.0",
]
